@@ -1,3 +1,8 @@
+Wed Aug 13 10:56:52 2003  George Lebl <jirka@5z.com>
+
+	* daemon/misc.c: try /dev/fd (FreeBSD equivalent of /proc/self/fd) as
+	  well, and also ignore entries starting with '.', just in case.
+
 Wed Aug 13  Brian Cameron <Brian.Cameron@Sun.COM>
 
 	* acconfig.h, configure.in: add check for fbconsole (fallback
